# aerial-autonomy-stack

./: README.md
.github/workflows/: aas-amd64-main.yml  aircraft-amd64-build.yml  ground-amd64-build.yml  simulation-amd64-build.yml
aircraft/: aircraft.yml.erb
aircraft/aircraft_resources/patches/: fix_onnx_model.py
aircraft/aircraft_ws/src/offboard_control/src/: ardupilot_guided.cpp  px4_offboard.cpp
aircraft/aircraft_ws/src/yolo/: CMakeLists.txt  package.xml
aircraft/aircraft_ws/src/yolo/src/: yolo.cpp  yolo.hpp
aircraft/aircraft_ws/src/yolo_py/yolo_py/: yolo_node.py
ground/: ground.yml.erb
scripts/: sim_build.sh
scripts/docker/: Dockerfile.aircraft
simulation/simulation_resources/aircraft_models/: sensor_config.yaml
simulation/simulation_resources/aircraft_models/sensor_camera/: model.sdf.erb
simulation/simulation_resources/aircraft_models/sensor_lidar/: model.sdf.erb
simulation/simulation_resources/comms/gz_gst_bridge/: gz_gst_bridge.cpp
supplementary/: BOM.md  RATIONALE.md  REQUIREMENTS_UBUNTU.md  REQUIREMENTS_WSL.md  SETUP_AVIONICS.md  TODOs.md
